--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import "../../styles/variables.scss";
 
 .body {
   background-color: $dark;
@@ -11,7 +11,6 @@
     color: $green;
     text-decoration:none;
   }
-
   h1 {
     font-size: 3rem;
     font-weight: 700;
